Fixed tabbing, changed condition sizing and spacing

--- a/styles/CurrentWeather.css
+++ b/styles/CurrentWeather.css
@@ -1,10 +1,10 @@
 .CurrentWeather {
 	color: #FFF;
-  display: flex;
-  justify-content: space-between;
-  border: 0.02rem solid ghostwhite;
-  padding: 2rem;
-  margin: auto;
+	display: flex;
+	justify-content: space-between;
+	border: 0.02rem solid ghostwhite;
+	padding: 2rem;
+	margin: auto;
 }
 
 .current-temp {
@@ -12,11 +12,17 @@
 }
 
 .condition {
-	font-size: 1.4rem;
+	font-size: 1.2rem;
+	margin: 0;
+	padding: 0;
 }
 
 h2 {
 	font-size: 1.8rem;
+}
+
+h3 {
+	margin: 0;
 }
 
 .hi-lo {
